Changes in version 2024.4.23

- Fix test-CRAN.R: kilobytes is not available on some systems.

Changes in version 2024.4.17

- New, simpler method for defining additional units to analyze (other than kilobytes and seconds): if result is data frame with 1 row, numeric columns are used as additional units. Arguments unit.col.vec and more.units have been removed from references_best.
- atime_pkg version names HEAD/base/CRAN defined in R color names are now translated to their expanded names on the plot (CRAN=1.15.0 etc), and default colors were added for Slow and Fast.

Changes in version 2024.4.12

- atime_pkg gains tests.dir arg, thanks @MichaelChirico for the suggestion.
- atime no longer keeps memory column (sometimes too large) from bench::mark.

Changes in version 2024.3.5

- if(requireNamespace("nc")) in tests, thanks CRAN.

Changes in version 2024.2.13

- atime_grid gains new argument symbol.params, and more informative error messages.

Changes in version 2024.1.31

- modify predict tests to use length.num instead of kilobytes (fails on CRAN).
- improved error message for predict when unit value is out of range of data.

Changes in version 2024.1.24

- improved documentation for atime_versions and atime_versions_exprs.
- results argument of atime_versions renamed to result, for consistency with atime.

Changes in version 2023.12.4

- improved documentation for atime_pkg, which clarifies that SHA versions and pkg.edit.fun may be specified in test.list elements.

Changes in version 2023.11.11

- new function get_sha_vec, which is called in atime_versions_exprs, to check for correctly specified versions (new helpful errors when versions are not specified correctly)
- atime_versions_install now uses R CMD INSTALL instead of install.packages, so we can stop with an error if there was some problem with installation.

Changes in version 2023.10.9

- default and errors for N in atime.
- warning if only one N evaluated in atime.