@@ -9,6 +9,8 @@ export(atime_versions)
 export(atime_versions_remove)
 export(atime_versions_exprs)
 export(atime_pkg)
+export(atime_test)
+export(atime_test_list)
 export(glob_find_replace)
 S3method("print", "atime")
 S3method("plot", "atime")
