@@ -168,9 +168,12 @@ atime_versions_exprs <- function(pkg.path, expr, sha.vec=NULL, verbose=FALSE, pk
     new.Package <- new.Package.vec[[commit.i]]
     old.lines <- capture.output(substitute(expr))
     new.lines <- gsub(
-      paste0(Package,"(:+)"),
-      paste0(new.Package,"\\1"),
+      paste0(Package,":"),
+      paste0(new.Package,":"),
       old.lines)
+    if(identical(old.lines,new.lines)){
+      stop("expr should contain at least one instance of data.table: to replace with data.table.SHA1:")
+    }
     a.args[[commit.name]] <- str2lang(paste(new.lines, collapse="\n"))
   }
   a.args
