@@ -284,6 +284,17 @@ test_that("atime_versions_exprs error when sha.vec element not string", {
   }, "each ... argument value and sha.vec element must be a string (package version, length=1, not NA), problems: N", fixed=TRUE)
 })
 
+test_that("atime_versions_exprs error when expr does not contain pkg:", {
+  expect_error({
+    atime::atime_versions_exprs(
+      pkg.path="~/R/data.table",
+      expr=dt[, .(vs = (sum(val))), by = .(id)],
+      "Before"="be2f72e6f5c90622fe72e1c315ca05769a9dc854",
+      "Regression"="e793f53466d99f86e70fc2611b708ae8c601a451", 
+      "Fixed"="58409197426ced4714af842650b0cc3b9e2cb842") 
+  }, "expr should contain at least one instance of data.table: to replace with data.table.SHA1:", fixed=TRUE)
+})
+
 test_that("atime_versions_exprs error when sha.vec element char vector", {
   expect_error({
     atime::atime_versions_exprs(
